<resources>
    <string name="app_name">POS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_unassigned">Non Assigné</string>
    <string name="menu_today">Aujourd\'hui</string>
    <string name="menu_ongoing">En Cours</string>
    <string name="menu_completed">Terminées</string>
    <string name="menu_my_orders">Mes Courses</string>
    <string name="menu_to_be_treated">A Traiter</string>
    <string name="menu_place_order">Commandes</string>
    <string name="orders">Courses</string>
    <string name="group_pos">Point de vente</string>
    <string name="clients">Clients</string>
    <string name="livraison_express">Livraison Express</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="sign_in">Connexion</string>
    <string name="livraison_express_logo">Livraison Express Logo</string>
    <string name="reporting">Statistiques</string>
    <string name="service_available">Services disponibles à</string>
    <string name="loading">Chargement en cours…</string>
    <string name="search_contact">Rechercher un contact</string>
    <string name="address_contact_List">Liste des adresses</string>
    <string name="name_contact">Nom complèt: </string>
    <string name="email_contact">Email: </string>
    <string name="phone_contact">Téléphone 1: </string>
    <string name="phone_alt_contact">Téléphone 2: </string>
    <string name="civility">Les adresses de M/Mme: </string>
    <string name="note">Note interne: </string>
    <string name="surname">Sur nom: </string>
    <string name="save">Sauvegarder </string>
    <string name="shared_transition">shared_element_container</string>
    <string name="menu_contacts">Contacts</string>
    <string name="key_word">Mot clè exemple: teléphone, nom…</string>
    <string name="enter_address">Veuillez entrer votre email.</string>
    <string name="enter_valid_email">Veuillez entrer une adresse email valide</string>
    <string name="enter_password">Veuillez entrer votre mot de passe</string>
    <string name="enter_phone_1">Veuillez entrer le numéro de téléphone</string>
    <string name="enter_name">Veuillez entrer le nom</string>
    <string name="enter_first_name">Veuillez entrer le prénom</string>
    <string name="enter_phone_length">Le téléphone doit avoir minimun 9 chiffres</string>
    <string name="enter_quartier">Veuillez entrer le nom</string>
    <string name="enter_name_address">Veuillez entrer le nom d adresse</string>
    <string name="_1">1</string>
    <string name="me">Moi</string>
    <string name="other">Autre</string>
    <string name="fullName">Nom et Prénoms</string>
    <string name="phone_1">Téléphone 1</string>
    <string name="phone_2">Téléphone 2</string>
    <string name="next">Continuer</string>
    <string name="_2">2</string>
    <string name="sender_contact">Contact de l\'expediteur</string>
    <string name="receiver_contact">Contact du destinataire</string>
    <string name="sender">Expéditeur</string>
    <string name="receiver">Destinataire</string>
    <string name="product_name">Nom du produit</string>
    <string name="price">Prix</string>
    <string name="quantity">Quantité</string>
    <string name="add_to_list">Ajouter à la liste</string>
    <string name="textview">textView</string>
    <string name="delivery">Livraison</string>
    <string name="create_order">Créer une nouvelle commande</string>
    <string name="order_list">Liste des commandes</string>
    <string name="destinataire">Destinataire:</string>
    <string name="none">Aucun</string>
    <string name="cart_content">Contenu du panier:</string>
    <string name="cart">Panier</string>
    <string name="checkout">Valider le panier</string>
    <string name="place_order">Passer une commande</string>
    <string name="quarter">Quartier</string>
    <string name="sender_address">Adresse de l\'expéditeur</string>
    <string name="city">Ville</string>
    <string name="address_description">Description de l\'addresse</string>
    <string name="geolocation">Adresse géolocalisé</string>
    <string name="validation">Validation</string>
    <string name="receiver_address">Adresse du destinataire</string>
    <string name="_3">3</string>
    <string name="shipping">Livraison</string>
    <string name="shipping_price">Prix de livraison</string>
    <string name="_500_fcfa">500 FCFA</string>
    <string name="_1000_fcfa">1000 FCFA</string>
    <string name="_1500_fcfa">1500 FCFA</string>
    <string name="_2000_fcfa">2000 FCFA</string>
    <string name="order">Commander</string>
    <string name="client_contact">Contact du client</string>
    <string name="client_address">Adresse du client</string>
    <string name="nom_address">Nom adresse:</string>
    <string name="address_title">Titre</string>
    <string name="longitude_address">Longitude:</string>
    <string name="latitude_address">Latitude:</string>
    <string name="quartier_address">Quartier:</string>
    <string name="description_address">Description:</string>
    <string name="shipping_time">Heure de livraison</string>
    <string name="contacts">Contacts</string>
    <string name="contact">Contact</string>
    <string name="search">Rechercher</string>
    <string name="enter_new_address">Entrer une nouvelle adresse</string>
    <string name="new_product">Ajouter un produit</string>
    <string name="add_to_cart">Ajouter au panier</string>
    <string name="delete">Supprimer</string>
    <string name="total_amount">Montant Total:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Annuler</string>
    <string name="valider">Valider</string>
    <string name="saving">Enregistrement en cours…</string>
    <string name="group_delivery">Courses</string>
    <string name="group_client">Clients</string>
    <string name="_4">4</string>
    <string name="import_contact">Importer un contact</string>
    <string name="address_list">Liste d\'adresses</string>
    <string name="chose_address">Veuillez choisir une adresse.</string>
    <string name="close">Fermer</string>
    <string name="last_name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="contact_info">Informations du contact</string>
    <string name="contact_address">Adresse du contact</string>
    <string name="logout">Déconnexion</string>
    <string name="filter">Filtrer</string>
    <string name="advanced_search">Filtrage avancé</string>
    <string name="start_point">Départ</string>
    <string name="end_point">Arrivé</string>
    <string name="date">Date</string>
    <string name="picking">Chargement</string>
    <string name="enter_quarter">Entrer un quartier</string>
    <string name="status">Statut</string>
    <string name="pending">En attente</string>
    <string name="started">Démarrées</string>
    <string name="relaunched">Relancées</string>
    <string name="search_params">Nom ou téléphone</string>
    <string name="before_starting_client_available_title">Avant le départ pour la zone de livraison du client. (client joignable)</string>
    <string name="before_starting_client_available_msg">Hello, Ici Livraison Express, juste vous informer que nous nous mettons en chemin pour votre livraison!</string>
    <string name="before_starting_client_unavailable_title">Avant le départ pour la zone de livraison du client. (client injoignable)</string>
    <string name="before_starting_client_unavailable_msg">Hello, Ici Livraison Express. Nous avons sans succès essayé de vous joindre pour votre livraison de ce jour. Merci de nous recontacter une fois disponible. Merci !</string>
    <string name="once_on_delivery_area_client_unavailable_title">Arrivée dans la zone de livraison du client (client injoignable).</string>
    <string name="once_on_delivery_area_client_unavailable_msg">Hello, Ici Livraison Express, nous nous trouvons actuellement dans votre zone de livraison et vous êtes injoignable, bien vouloir nous recontacter lorsque vous serez disposés à récupérer votre colis.</string>
    <string name="once_on_delivery_area_title_after_waiting_delay_title">Départ de la zone de livraison du client après délais d\'attente.</string>
    <string name="once_on_delivery_area_msg_after_waiting_delay">Hello, Ici Livraison Express, Pour des contraintes dues au respect de nos délais de livraison, nous nous mettons en routes pour les livraisons suivantes.  Bien vouloir nous recontacter une fois le message reçu svp pour éventuellement reprogrammer votre livraison.</string>
    <string name="on_cancellation_title">Sur annulation de la part du client.</string>
    <string name="on_cancellation_msg">Hello, ici Livraison Express; suite à votre demande,   votre commande a bien été annulée ! Merci d\’avoir choisi Livraison Express.</string>
    <string name="msg_for_other_purpose_title">Autre raison.</string>
    <string name="msg_for_other_purpose">  </string>
    <string name="permission_rationale_location">L\'access au service de géolocalisation est requit pour cette page afin de vous situer sur la carte.</string>
    <string name="location_permission_denied">Cette page requiert votre position Veuillez réessayer et accorder l\'accès pour utiliser la localisation.\n Si l\'autorisation a été définitivement refusée, elle peut être activée à partir des paramètres système > application > livraison express coursier.</string>
    <string name="permission_required_toast">Votre position est requise pour cette fonctionnalité.</string>
    <string name="provider_name">livraison-express</string>
    <string name="no_connexion_detected">Erreur de connexion, verifiez votre connexion !!!</string>
    <string name="action_filter">Filtrer</string>
    <string name="order_details_activity_title">Détail de la course</string>
    <string name="content_details_fragment_title">Contenu</string>
    <string name="sender_details_fragment_title">Sender</string>
    <string name="receiver_details_fragment_title">Receiver</string>
    <string name="take_order">Prendre la course</string>
    <string name="start_order">Demarrer la course</string>
    <string name="reject_order">Refuser la course</string>
    <string name="relaunch_order">Mettre la course en relance</string>
    <string name="deliver_order">Livrer la course</string>
    <string name="pick_order">Charger la course</string>
    <string name="delivery_men_list">Liste des Coursiers</string>
    <string name="empty_delivery_men_list">La liste des coursiers est vide</string>
    <string name="add_intern_order">Ajouter une course interne</string>
    <string name="menu_pendind">En attente</string>
    <string name="menu_started">Démarrée</string>
    <string name="menu_charged">Chargée</string>
    <string name="menu_delivered">Livrée</string>
    <string name="menu_cancelled">Annulée</string>
    <string name="menu_relaunch">Relancée</string>
    <string name="menu_none">Tous</string>
    <string name="my_shops">Mes magasins</string>
    <string name="settings">Paramètres</string>
    <string name="week">7 derniers jours</string>
    <string name="month">30 derniers jours</string>
    <string name="yesterday">Hier</string>
    <string name="my_contacts">Mes Contacts</string>
    <string name="menu_to_validate">A Valider</string>
    <string name="group_external_modules">Modules externes</string>
    <string name="nav_inventory_management">Gestion de stock</string>
    <string name="nav_parking">Parc automobile</string>
</resources>