<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter_alt_white_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <group>
                <item
                    android:id="@+id/item_today"
                    android:title="@string/menu_today"/>
                <item
                    android:id="@+id/item_yesterday"
                    android:title="@string/yesterday"/>
                <item
                    android:id="@+id/item_week"
                    android:title="@string/week"/>
                <item
                    android:id="@+id/item_month"
                    android:title="@string/month"/>
                <item
                    android:id="@+id/item_other_date_range"
                    android:title="@string/other"/>
            </group>
        </menu>
    </item>
</menu>