<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.new_course.NewCourseActivity">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_arrow_back_white_24"
                app:titleTextColor="@color/white"
                app:title="@string/new_product"
                android:id="@+id/toolbar"/>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp_20"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_name">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etName"/>
                </com.google.android.material.textfield.TextInputLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_10"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/price">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:id="@+id/etPrice"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <View
                        android:layout_width="@dimen/dp_10"
                        android:layout_height="0dp"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/quantity">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_1"
                            android:inputType="number"
                            android:id="@+id/etQuantity"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_20"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_70"
                    android:text="@string/add_to_cart"
                    android:onClick="onButtonClick"
                    android:id="@+id/buttonAdd"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_70"
                    android:text="@string/add_intern_order"
                    android:layout_marginVertical="@dimen/dp_20"
                    android:onClick="onButtonClick"
                    android:id="@+id/buttonInternOrder"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <com.andremion.counterfab.CounterFab
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorAccent"
            android:src="@drawable/ic_round_shopping_cart_24"
            app:tint="@color/white"
            android:visibility="gone"
            android:onClick="onButtonClick"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/dp_20"
            android:id="@+id/fabCart"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>