<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="bottom"
    android:orientation="vertical"
    android:background="@color/blue_50"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_70"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/logo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvFullName"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:textColor="@color/grey_40"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tvEmail"
        android:textColor="@color/grey_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        tools:text="@string/nav_header_subtitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_40"
        android:id="@+id/tvVersion"
        android:layout_marginHorizontal="@dimen/dp_16"
        tools:text="Version 1.0.1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_5"
        tools:background="@color/overlay_dark_10"/>
</LinearLayout>