<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_men_list"
            android:gravity="center"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:id="@+id/tvTitle" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_10" />
        <ProgressBar
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:indeterminateTint="@color/colorAccent"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvNoDeliveryMan"
            android:visibility="gone"
            android:text="@string/empty_delivery_men_list"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/rvDeliveryMen" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_gravity="center"
            android:id="@+id/buttonCancel"
            android:backgroundTint="@color/white"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
</layout>